# pasystray

./: .gitignore  .travis.sh  .travis.yml  AUTHORS  Makefile.am  README  README.md  TODO  bootstrap.sh  configure.ac  meson.build  meson_options.txt  options.c
.github/workflows/: build.yml
data/: meson.build  pasystray.desktop  svg2png.sh
debian/: changelog  control  copyright
man/: meson.build  pasystray.1
pkg/arch/pasystray/: PKGBUILD
pkg/arch/pasystray-git/: .gitignore  PKGBUILD
pkg/debian/: changelog  control
pkg/gentoo/: Manifest  pasystray-0.1.2.ebuild  pasystray-0.2.1.ebuild  pasystray-0.2.2.ebuild  pasystray-0.3.0.ebuild  pasystray-9999.ebuild
scripts/: backtrace  backtrace.gdb  ubuntu-build-deps.sh
src/: Makefile.am  avahi.c  avahi.h  config.h.meson  menu_info.c  menu_info.h  meson.build  notify.c  notify.h  options.c  options.h  pasystray.c  pasystray.desktop  pasystray.glade  pasystray.gtk2.glade  pasystray.gtk3.glade  pasystray.h  pulseaudio.c  pulseaudio.h  pulseaudio_action.c  pulseaudio_action.h  pulseaudio_info.c  pulseaudio_info.h  systray.c  systray.h  systray_impl.c  systray_impl.h  ui.c  ui.h  x11-key-grabber.c  x11-key-grabber.h  x11-property.c  x11-property.h
