iconsdir =  $(datadir)/icons/hicolor/scalable/apps
icons_DATA = data/pasystray.svg

pixmapsdir =  $(datadir)/pixmaps
pixmaps_DATA = data/pasystray.png

desktopdir = $(datadir)/applications
dist_desktop_DATA = data/pasystray.desktop

EXTRA_DIST = bootstrap.sh README LICENSE $(icons_DATA) $(pixmaps_DATA) $(desktop_DATA)

SUBDIRS = src
