install_data('pasystray.svg',
             install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'apps'))

install_data('pasystray.png',
             install_dir: join_paths(datadir, 'pixmaps'))

install_data('pasystray.desktop',
             install_dir: join_paths(datadir, 'applications'))

install_data('pasystray.desktop',
             install_dir: join_paths(sysconfdir, 'xdg', 'autostart'))
